# ESP32-modbus-reader

./: .gitignore  CMakeLists.txt  build.bat  build.ps1  clean_and_build.bat  run_install.bat  sdkconfig.defaults
docs/: BUILD_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md
docs/devices/: M31_Series_User_Manual.md  MAX485_RS485_Module.md  README.md  XIAO_ESP32C3_Getting_Started.md  eAirMD-modbus-register-list-public-clean.csv  eAirMD-modbus-register-list-public-clean.xlsx  eWind-modbus-register-list-public-clean-enumerators.csv  eWind-modbus-register-list-public-clean.csv  eWind-modbus-register-list-public-clean.xlsx  eairmd.md  ewind.md
main/: CMakeLists.txt  main.c  modbus_devices.c  modbus_devices.h  modbus_manager.c  modbus_manager.h  modbus_protocol.c  modbus_protocol.h  nvs_storage.c  nvs_storage.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/html/: dashboard.html  index.html  modbus.html  modbus.js  script.js  style.css
